# src/main/java/service/OpenApiServiceTermController.java
@@ -1,6 +1,7 @@
 package service;
 
 
+import model.ServiceTerm;
 import org.springframework.web.bind.annotation.*;
 import result.ServiceTermResult;
 import result.OpenApiResult;
@@ -27,6 +28,17 @@ public class OpenApiServiceTermController {
                                                   @RequestHeader (value = "x-jcloud-pin")String pin,
                                                   @RequestHeader(value = "x-jcloud-erp",required = false) String erp
     ) {
+        return null;
+    }
+    @RequestMapping(path = "/postQuery/{serviceCode}",method = RequestMethod.POST)
+    public OpenApiResult<ServiceTermResult> postQuery(@PathVariable(value = "serviceCode") String serviceCode,
+                                                      @RequestParam(value = "filters",required = false) Map<String,String> filters,
+                                                      @RequestParam(value = "pageNumber",required = false) Integer pageNumber,
+                                                      @RequestParam(value = "pageSize")Integer pageSize,
+                                                      @RequestHeader (value = "x-jcloud-pin")String pin,
+                                                      @RequestHeader(value = "x-jcloud-erp",required = false) String erp,
+                                                      @RequestBody()ServiceTerm serviceTerm
+                                                      ) {
         return null;
     }
 
